<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/swoosh_button"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845" />

    <ImageView
        android:id="@+id/welcomeBGImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/BackgroundImage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/welcomescreenbg" />

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="89dp"
        android:layout_height="29dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/logoimagedescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo" />

    <TextView
        android:id="@+id/GoAllTxt"
        android:layout_width="162dp"
        android:layout_height="41dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/go_all_in"
        android:textAlignment="center"
        android:textColor="#FFAAFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg" />

    <TextView
        android:id="@+id/AllGoTxt"
        android:layout_width="257dp"
        android:layout_height="29dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/on_going_all_out"
        android:textAlignment="center"
        android:textColor="#FF00FF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoAllTxt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="333dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:singleLine="false"
        android:text="@string/txt_MoreDetails"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/welcomeBGImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllGoTxt" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeBGImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>